--- a/index.html
+++ b/index.html
@@ -1,42 +1,63 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Botunuzun Sitesi</title>
+    <title>Rase Diet - Online Diyet Programları</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Discord Botunuzun Adı</h1>
         <nav>
+            <div class="logo">Rase Diet</div>
             <ul>
-                <li><a href="#hakkinda">Hakkında</a></li>
-                <li><a href="#komutlar">Komutlar</a></li>
-                <li><a href="#iletisim">İletişim</a></li>
+                <li><a href="index.html">Ana Sayfa</a></li>
+                <li><a href="login.html">Giriş Yap</a></li>
+                <li><a href="register.html">Kayıt Ol</a></li>
+                <li><a href="admin.html">Admin Paneli</a></li>
             </ul>
         </nav>
     </header>
+    
     <main>
-        <section id="hakkinda">
-            <h2>Bot Hakkında</h2>
-            <p>Botunuzun kısa açıklaması burada yer alacak.</p>
+        <section id="hero">
+            <h1>Online Diyet Programları</h1>
+            <p>Kilo alma veya verme hedeflerinize ulaşın, size özel diyet programları ile!</p>
+            <a href="#programs" class="btn">Programları İnceleyin</a>
         </section>
-        <section id="komutlar">
-            <h2>Komutlar</h2>
-            <ul>
-                <li><strong>r!ping</strong> - Botun yanıt süresini gösterir.</li>
-                <li><strong>r!yardım</strong> - Botun komutlarını listeler.</li>
-                <!-- Diğer komutlar buraya eklenebilir -->
-            </ul>
-        </section>
-        <section id="iletisim">
-            <h2>İletişim</h2>
-            <p>Destek almak için [buraya](#) tıklayın.</p>
+
+        <section id="programs">
+            <h2>Programlar</h2>
+            <div class="program-list">
+                <div class="program-item" onclick="openModal('kilo-verme')">
+                    <h3>Kilo Verme Programı</h3>
+                    <p>Bireysel ihtiyaçlarınıza uygun diyet planları oluşturuyoruz.</p>
+                    <p>Fiyat: 300 TL</p>
+                </div>
+                <div class="program-item" onclick="openModal('kilo-alma')">
+                    <h3>Kilo Alma Programı</h3>
+                    <p>Sizler için özel olarak hazırlanan kilo alma diyet programı.</p>
+                    <p>Fiyat: 350 TL</p>
+                </div>
+                <!-- Daha fazla program eklenebilir -->
+            </div>
         </section>
     </main>
+
     <footer>
-        <p>&copy; 2024 Botunuzun Adı. Tüm hakları saklıdır.</p>
+        <p>&copy; 2024 Rase Diet. Tüm hakları saklıdır.</p>
     </footer>
+
+    <!-- Modal -->
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <div id="modal-details">
+                <!-- Modal içeriği buraya yüklenecek -->
+            </div>
+        </div>
+    </div>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
